<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="description">Description</string>
    <string name="season">Seasons</string>
    <string name="total_episode">%1$d Episode</string>
    <string name="category">Category</string>
    <string name="release_date">Release Date :</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="retake">Ulangi</string>
    <string name="filter">filter</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="normal">Normal</string>
    <string name="search_hint">Find Movie or Tv Show…</string>
    <string name="not_has_favorite_movies">Tidak Memiliki Favorite Movies</string>
    <string name="not_has_favorite_tv_shows">Tidak Memiliki Favorite TV Shows</string>
    <string name="favorite_added">Favorite Added</string>
    <string name="favorite_removed">Favorite Removed</string>
    <string name="empty" />
</resources>