<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:tabIndicatorColor="@color/color_primary_dark"
        app:tabIndicatorHeight="@dimen/margin_4"
        app:tabTextColor="@color/color_primary_dark" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tab_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_4"
        android:background="@drawable/bg_line_bottom_bar" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
</androidx.appcompat.widget.LinearLayoutCompat>